--- a/node/package.json
+++ b/node/package.json
@@ -5,6 +5,7 @@
   "main": "dist/app.js",
   "scripts": {
     "start": "tsc && node dist/app.js",
+    "start.dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "TAKEDE MADIGA Albert <tmanapster@gmail.com>",
@@ -12,7 +13,8 @@
   "devDependencies": {
     "@types/express": "^4.16.1",
     "tslint": "^5.12.1",
-    "typescript": "^3.3.3"
+    "typescript": "^3.3.3",
+    "nodemon": "2.0.19"
   },
   "dependencies": {
     "axios": "^0.27.2",
